# Probe2GeneMapper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
py_probe_mapper/: cli.py  sdk.py
py_probe_mapper/accession_lookup/: accession_lookup.py
py_probe_mapper/coordinate_lookup/: coordinate_lookup.py
py_probe_mapper/direct_lookup/: direct_lookup.py
py_probe_mapper/genome_utils/: Homo_sapiens.GRCh38.genes.tsv
py_probe_mapper/lookup_classifier/: gpt_lookup_classifier.py  optimised_lookup_classifier.py
py_probe_mapper/metadata_builder/: build_metadata.py
